made cards into a flex with a hover glow, changed color scheme, messed around with the header

--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="assets/style/reset.css">
     <link rel="stylesheet" href="./assets/style/style.css">
-    <title>Chuyi Lee's Portfolio</title>
+    <title>Chuyi's Dev Page</title>
 </head>
 
 <body>
     <header>
+
+        <img src="https://cdn.pixabay.com/photo/2016/08/08/09/17/avatar-1577909_1280.png" alt="">
         <h1>
-            Welcome!
+            Chuyi Lee
         </h1>
 
         <nav>
